# pyGNARSIL

./: LICENSE  README.md  baconShorExample.py  pyGNARSIL.py  pyGNARSIL_par  pyGNARSIL_par.py
pyGNARSIL/: __init__.py
pyGNARSIL 2/: LICENSE  README.md  pyproject.toml
tests/: baconShorexample.py  test_core.py
