[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyGNARSIL"
version = "0.1.0"
description = "Numba-accelerated gauge splitting utilities."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Oskar Novak" }]
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24",
  "numba>=0.57"
]

[project.urls]
"Source" = "https://example.com/pyGNARSIL"
